# next-tramway-esp32

./: .gitignore  README.md  flake.nix  next_tramway.py
next-tramway-esp32/: .env.sample  .gitignore  Cargo.toml
next-tramway-esp32/.cargo/: config.toml
next-tramway-esp32/src/: display.rs  lcd.rs  lib.rs
