[package]
edition      = "2024"
name         = "next-tramway-esp32"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "next-tramway-esp32"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32h2", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32h2",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32h2"] }

bt-hci = "0.6.0"
embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
esp-radio = { version = "0.17.0", features = [
  "ble",
  "esp-alloc",
  "esp32h2",
  "unstable",
] }
trouble-host = { version = "0.5.0", features = ["gatt"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
esp-println = { version = "0.16.1", features = [
  "esp32h2",
  "log-04"
]}
esp-backtrace = { version = "0.18.1", features = [
  "esp32h2",
  "panic-handler",
  "println",
]}


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
